| Summary: | ASTERISK-24074: testsuite: Fix tests/page_baseline | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | |
| Date Opened: | 2014-07-21 08:52:14 | Date Closed: | 2014-07-21 12:05:53 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Tests/testsuite |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When the media format work was merged, a number of tests failed. This issue is to fix the page_baseline test.
https://bamboo.asterisk.org/bamboo/browse/AST-ATTSCD-C632TE-470/test/case/1415751 | ||
| Comments: | |||